src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__agent_sessions__cli__parsers__acp_common__tests__norm_unknown_error.snap
---
source: src/agent_sessions/cli/parsers/tests/acp_common_tests.rs
expression: result
---
error:
  message: failed
