src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__agent_sessions__cli__parsers__acp_common__tests__todos_auto_ids.snap
---
source: src/agent_sessions/cli/parsers/tests/acp_common_tests.rs
expression: result
---
- content: Task A
  id: "1"
  status: pending
- content: Task B
  id: "2"
  status: pending
- content: Task C
  id: "3"
  status: pending
