src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__agent_sessions__cli__parsers__acp_common__tests__todos_non_numeric_prefix.snap
---
source: src/agent_sessions/cli/parsers/tests/acp_common_tests.rs
expression: result
---
- content: abc. Not a number prefix
  id: "1"
  status: pending
