src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__agent_sessions__cli__parsers__acp_common__tests__todos_numeric_prefix.snap
---
source: src/agent_sessions/cli/parsers/tests/acp_common_tests.rs
expression: result
---
- content: First item
  id: "1"
  status: pending
- content: Second item
  id: "2"
  status: pending
